# MultiMediaLearning

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/richie/multimedialearning/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sample.aac  sample.pcm  test.pcm
app/src/main/java/com/richie/multimedialearning/: MainActivity.java  MultiMediaApp.java  MySurfaceView.java  SimplePlayerActivity.java  SurfaceActivity.java
app/src/main/java/com/richie/multimedialearning/audiorecord/: AudioRecordActivity.java  AudioRecorder.java  PcmToWav.java  WaveHeader.java
app/src/main/java/com/richie/multimedialearning/audiotrack/: AudioTrackActivity.java  AudioTracker.java
app/src/main/java/com/richie/multimedialearning/camera/: Camera2SurfacePreview.java  CameraPreviewActivity.java  (+3 more)
app/src/main/res/layout/: activity_audio_record.xml  activity_audio_track.xml  activity_camera_open_gl.xml  activity_camera_preview.xml  activity_codec.xml  activity_ffmpeg_menu.xml  activity_ffmpeg_video.xml  activity_main.xml  activity_media_codec.xml  activity_media_mp4.xml  activity_media_muxur_extract.xml  activity_open_gl.xml  activity_simple_player.xml  activity_surface.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/richie/multimedialearning/: EncodeDecodeTest.java  ExampleUnitTest.java
ffmpeg/: build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/cpp/: CMakeLists.txt  ffmpeg_native.cpp  log_util.h
ffmpeg/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  avdct.h  codec.h  codec_par.h  vdpau.h
ffmpeg/src/main/cpp/ffmpeg/include/libavfilter/: avfilter.h
ffmpeg/src/main/cpp/ffmpeg/include/libavformat/: avformat.h
ffmpeg/src/main/cpp/ffmpeg/include/libavutil/: buffer.h  hash.h  hmac.h  hwcontext_vulkan.h  murmur3.h  rational.h
ffmpeg/src/main/cpp/include/libavcodec/: bsf.h  codec_desc.h  codec_id.h  packet.h  vaapi.h
ffmpeg/src/main/cpp/include/libavdevice/: avdevice.h
ffmpeg/src/main/cpp/include/libavfilter/: buffersink.h
ffmpeg/src/main/cpp/include/libavformat/: avio.h
ffmpeg/src/main/cpp/include/libavutil/: aes_ctr.h  avstring.h  channel_layout.h  common.h  eval.h  ffversion.h  hwcontext.h  hwcontext_cuda.h  hwcontext_d3d11va.h  imgutils.h  log.h  mem.h  opt.h  pixdesc.h  pixfmt.h
ffmpeg/src/main/cpp/media/: const.h  one_frame.h
ffmpeg/src/main/cpp/media/decoder/: base_decoder.cpp  base_decoder.h  decode_state.h  i_decode_state_cb.cpp  i_decode_state_cb.h  i_decoder.h
ffmpeg/src/main/cpp/media/decoder/audio/: audio_decoder.cpp  audio_decoder.h
ffmpeg/src/main/cpp/media/decoder/video/: v_decoder.cpp  v_decoder.h
ffmpeg/src/main/cpp/media/include/libavutil/: attributes.h  cpu.h  encryption_info.h  frame.h  hwcontext_opencl.h  intreadwrite.h  ripemd.h  timecode.h  video_enc_params.h
ffmpeg/src/main/cpp/media/player/: player.cpp  player.h
ffmpeg/src/main/cpp/media/player/default/: player.cpp  player.h
ffmpeg/src/main/cpp/media/render/audio/: audio_render.h  opensl_render.cpp  opensl_render.h
ffmpeg/src/main/cpp/media/render/video/: video_render.h
ffmpeg/src/main/cpp/media/render/video/native/: native_render.cpp  native_render.h
ffmpeg/src/main/cpp/utils/: logger.h  timer.h
ffmpeg/src/main/java/cn/richie/ffmpeg/: FFmpegNative.java
gradle/wrapper/: gradle-wrapper.properties
(+89 files in other folders)
